--- a/index.html
+++ b/index.html
@@ -6,18 +6,51 @@
     <title>Masai Investors</title>
     <style>
         #bodycard{
-            width:100%;
-            height:300px;
+            width:1500px;
+            height:auto;
             border: 1px solid black;
         }
         .cards{
-            
+            display: inline-block;
+            width: 24%;
+        }
+        .names{
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <div id="bodycard">
-        <div class="cards">   </div>
+        <div class="cards"> 
+            <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Vijay_Shekhar_Sharma_Paytm_96f52579b8.jpg" 
+            alt="Investor pic" width="300px" height="300px"> 
+            <p class="names">Vijay Shekhar Sharma</p>
+                <p>Founder & CEO</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_rect_06df45a24f.svg" 
+                alt="paytm logo" width="150px" height="150px">
+         </div>
+         <div class="cards"> 
+            <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Rectangle_427_637d69bb57.png" 
+            alt="Investor pic" width="300px" height="300px"> 
+            <p>Kunal Shah</p>
+                <p>Founder</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/cred_0a47d7b4f8.png" alt="paytm logo">
+         </div>
+         <div class="cards"> 
+            <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/amrish_rau_pine_labs_144e5e587c.jpg" 
+            alt="Investor pic" width="300px" height="300px"> 
+            <p>Amrish Rau</p>
+                <p>CEO</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pine_labs_0aa2407434.png" alt="paytm logo">
+         </div>
+         <div class="cards"> 
+            <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Sampad_swain_Instamojo_f12bf6341e.jpg" 
+            alt="Investor pic" width="300px" height="300px"> 
+            <p>Sampad Swain</p>
+                <p>Co-Founder & CEO</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/instamojo_8763e704f7.png" alt="paytm logo">
+         </div>
+         
     </div>
 </body>
 </html>
