--- a/index.html
+++ b/index.html
@@ -6,49 +6,79 @@
     <title>Masai Investors</title>
     <style>
         #bodycard{
-            width:1500px;
-            height:auto;
-            border: 1px solid black;
+            display: inline-block;
+            height:500px;
+            width: 100%;
         }
         .cards{
             display: inline-block;
-            width: 24%;
+            border: 1px solid rgb(239, 235, 235);
+            height:420px;
+            border-radius: 5px;
+            margin-left: 20px;
+            width: 21%;
+            padding: 10px;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         }
         .names{
             text-align: center;
+            font-size: 20px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        .pics{
+            display:block;
+            width: 100%;
+            margin: auto;
+        }
+        body{
+            margin: 50px;
+        }
+        .cname{
+            margin-top: 5px;
+            margin-left: 19%;
+            height: 60px;
+            width: 200px;
         }
     </style>
 </head>
 <body>
     <div id="bodycard">
+
         <div class="cards"> 
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Vijay_Shekhar_Sharma_Paytm_96f52579b8.jpg" 
-            alt="Investor pic" width="300px" height="300px"> 
+            alt="Investor pic" width="296px" height="304px" class="pics" > 
             <p class="names">Vijay Shekhar Sharma</p>
-                <p>Founder & CEO</p>
+                <p class="names">Founder & CEO</p>
                 <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_rect_06df45a24f.svg" 
-                alt="paytm logo" width="150px" height="150px">
+                alt="paytm logo" width="200px" height="200px" class="cname">
          </div>
+
          <div class="cards"> 
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Rectangle_427_637d69bb57.png" 
-            alt="Investor pic" width="300px" height="300px"> 
-            <p>Kunal Shah</p>
-                <p>Founder</p>
-                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/cred_0a47d7b4f8.png" alt="paytm logo">
+            alt="Investor pic" width="296px" height="304px" class="pics"> 
+            <p class="names">Kunal Shah</p>
+                <p class="names">Founder</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/cred_0a47d7b4f8.png" 
+                alt="paytm logo" width="200px" height="200px" class="cname">
          </div>
+
          <div class="cards"> 
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/amrish_rau_pine_labs_144e5e587c.jpg" 
-            alt="Investor pic" width="300px" height="300px"> 
-            <p>Amrish Rau</p>
-                <p>CEO</p>
-                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pine_labs_0aa2407434.png" alt="paytm logo">
+            alt="Investor pic" width="296px" height="304px" class="pics"> 
+            <p class="names">Amrish Rau</p>
+                <p class="names">CEO</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pine_labs_0aa2407434.png"
+                 alt="paytm logo" width="200px" height="200px" class="cname">
          </div>
+
          <div class="cards"> 
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Sampad_swain_Instamojo_f12bf6341e.jpg" 
-            alt="Investor pic" width="300px" height="300px"> 
-            <p>Sampad Swain</p>
-                <p>Co-Founder & CEO</p>
-                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/instamojo_8763e704f7.png" alt="paytm logo">
+            alt="Investor pic"width="296px" height="304px" class="pics"> 
+            <p class="names">Sampad Swain</p>
+                <p class="names">Co-Founder & CEO</p>
+                <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/instamojo_8763e704f7.png"
+                 alt="paytm logo" width="200px" height="200px" class="cname">
          </div>
          
     </div>
